JDK16-specific fixes.